--- a/README
+++ b/README
@@ -36,11 +36,13 @@ REFERENCE
 
 [1] O Karakus, I Rizaev, and A Achim. "Ship Wake Detection in SAR Images via Sparse Regularisation."
 	IEEE Transactions on Geoscience and Remote Sensing, 2020.
-link		: https://ieeexplore.ieee.org/document/8891718 
-arXiv link 	: https://arxiv.org/abs/1904.03309
+link		: [https://ieeexplore.ieee.org/document/8891718]
+arXiv link 	: [https://arxiv.org/abs/1904.03309]
 
 [2]  O Karakus, and A Achim. "Ship Wake Detection in X-band SAR Images Using Sparse GMC Regularization." 
        	IEEE ICASSP 2019.
-link		: https://ieeexplore.ieee.org/abstract/document/8683489
+link		: [https://ieeexplore.ieee.org/abstract/document/8683489]
+
+DOI --> [https://doi.org/10.5523/bris.f2q4t5pqlix62sv5ntvq51yjy].
 *****************************************************************************************************************
 
