--- a/README
+++ b/README
@@ -43,6 +43,6 @@ arXiv link 	: [https://arxiv.org/abs/1904.03309]
        	IEEE ICASSP 2019.
 link		: [https://ieeexplore.ieee.org/abstract/document/8683489]
 
-DOI --> <https://doi.org/10.5523/bris.f2q4t5pqlix62sv5ntvq51yjy>.
+DOI --> <http://doi.org/10.5523/bris.f2q4t5pqlix62sv5ntvq51yjy>.
 *****************************************************************************************************************
 
