--- a/README
+++ b/README
@@ -30,7 +30,10 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-Copyright (C) Oktay Karakus <o.karakus@bristol.ac.uk> and Alin Achim <alin.achim@bristol.ac.uk>, 08-05-2020, University of Bristol, UK
+Copyright (C) Oktay Karakus <o.karakus@bristol.ac.uk> 
+		and 
+	      Alin Achim <alin.achim@bristol.ac.uk>, 
+	      08-05-2020, University of Bristol, UK
 *****************************************************************************************************************
 REFERENCE
 
