--- a/README
+++ b/README
@@ -48,6 +48,6 @@ link		: [https://ieeexplore.ieee.org/abstract/document/8683489]
 
 [3]  O Karakus, and A Achim. (2020): "AssenSAR Wake Detector." 
 	https://doi.org/10.5523/bris.f2q4t5pqlix62sv5ntvq51yjy
-
+<a href="doi.org/10.5523/bris.f2q4t5pqlix62sv5ntvq51yjy"><img src="doi.org/10.5523/bris.f2q4t5pqlix62sv5ntvq51yjy.svg" alt="DOI"></a>
 *****************************************************************************************************************
 
